# CareerHub

./: README.md  package-lock.json  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: 20240320000000_initial_schema.sql
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/admin/: mod.rs
backend/src/api/applications/: mod.rs
backend/src/api/auth/: mod.rs
backend/src/api/companies/: mod.rs
backend/src/api/jobs/: mod.rs
backend/src/api/users/: mod.rs
backend/src/auth/: auth.rs  jwt.rs  middleware.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: application.rs  applications.rs  auth.rs  companies.rs  company.rs  job.rs  jobs.rs  mod.rs  user.rs  users.rs
backend/src/routes/: auth.rs  companies.rs  jobs.rs  mod.rs  users.rs
backend/src/services/: auth.rs  auth_services.rs  job_services.rs  mod.rs  user_services.rs
backend/src/utils/: auth.rs  error.rs  jwt.rs  mod.rs  password.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/auth/: AdminRoute.tsx
src/components/jobs/: SearchFilters.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/contexts/: AuthContext.tsx
src/pages/: Home.tsx
src/pages/auth/: Login.tsx  Register.tsx
